@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-08T01:16:30Z",
+  "timestamp" : "2023-09-08T08:21:49Z",
   "count_outdated" : 486,
   "uniques_outdated" : 229,
-  "count" : 505,
-  "uniques" : 240,
+  "count" : 506,
+  "uniques" : 241,
   "clones" : [
     {
       "timestamp": "2023-08-28T00:00:00Z",
@@ -97,6 +97,15 @@
     },
     {
       "timestamp": "2023-09-07T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-09-08T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
