@@ -1,5 +1,5 @@
 {
-  "count": 19,
+  "count": 20,
   "uniques": 1,
   "clones": [
     {
@@ -54,6 +54,11 @@
     },
     {
       "timestamp": "2023-09-07T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-09-08T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
