@@ -1,3 +1,12 @@
+2023-09-08T08:21:49Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6119429406 # 771
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-08
+* notice: last 14d: unq all: 1 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 229 486 / 240 505
+* notice: next accum: outdated-unq outdated-all / unq all: 229 486 / 241 506
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-09-08]
+
 2023-09-08T01:16:30Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6116497626 # 770
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-08
